<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/artFragment">

    <fragment
        android:id="@+id/artDetailsFragment"
        android:name="com.example.artbooktesting.view.ArtDetailsFragment"
        android:label="ArtDetailsFragment" >
        <action
            android:id="@+id/action_artDetailsFragment_to_imageAPIFragment"
            app:destination="@id/imageAPIFragment" />
    </fragment>
    <fragment
        android:id="@+id/artFragment"
        android:name="com.example.artbooktesting.view.ArtFragment"
        android:label="ArtFragment" >
        <action
            android:id="@+id/action_artFragment_to_artDetailsFragment"
            app:destination="@id/artDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/imageAPIFragment"
        android:name="com.example.artbooktesting.view.ImageAPIFragment"
        android:label="ImageAPIFragment" />
</navigation>